--- a/assets/css/proof-ratings.css
+++ b/assets/css/proof-ratings.css
@@ -77,14 +77,21 @@
 }
 
 .proof-ratings-widget {
+    color: var(--textColor, inherit);
     display: flex;
-    padding: 20px;
+    padding: 15px 20px;
     line-height: 1.2;
     align-items: center;
     flex-direction: column;
     background-color: #fff;
     border-radius: 10px;
+    border: 3px solid transparent;
     box-shadow: 0 0 4px 0px rgba(0,0,0,0.25);
+    transition: 150ms all;
+}
+
+.proof-ratings-widget:hover {
+    border-color: var(--themeColor)
 }
 
 .proof-ratings-widget .review-site-logo {
@@ -99,16 +106,21 @@
     max-height: 100%;
 }
 
+.proof-ratings-widget .proof-ratings-stars i {
+    background-color: var(--themeColor, #0f7ff3);
+}
+
 .proof-ratings-widget .review-count {
     color: #fff;
     font-size: 14px;
     line-height: 1.3;
     padding: 5px 12px;
     margin-top: 10px;
-    background-color: #0f7ff3;
+    background-color: var(--themeColor, #0f7ff3);
 }
 
 .proof-ratings-widget .view-reviews {
     font-size: 12px;
     margin-top: 8px;
 }
+
