--- a/assets/css/proof-ratings-admin.css
+++ b/assets/css/proof-ratings-admin.css
@@ -2,7 +2,9 @@
     max-width: 1200px;
 }
 
-.proof-ratings-settings-wrap .wp-heading-inline {margin-bottom: 30px;}
+.proof-ratings-settings-wrap .wp-heading-inline {margin-bottom: 10px;}
+
+.proof-ratings-settings-wrap .nav-tab-wrapper {margin-bottom: 20px!important}
 
 .review-sites-checkboxes {
     display: flex;
