--- a/assets/css/proof-ratings.css
+++ b/assets/css/proof-ratings.css
@@ -1,4 +1,8 @@
-.proof-ratings-floating-badge {
+html {
+    scroll-behavior: smooth;
+}
+
+  .proof-ratings-floating-badge {
     --padx: 20px;
     min-width: 230px;
     display: inline-block;
@@ -7,15 +11,21 @@
     bottom: 30px;
     z-index: 3000;
     line-height: 1.3;
+    text-decoration: none!important;
     background-color: #fff;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 0 4px 4px rgba(246,211,0,0.4);
+    box-shadow: 0 0 4px 4px var(--shadowColor, rgba(246,211,0,0.4));
     transition: all 200ms;
 }
 
+.proof-ratings-floating-badge.right {
+    left: auto;
+    right: 30px
+}
+
 .proof-ratings-floating-badge:hover {
-    box-shadow: 0 0 4px 4px rgba(55,125,188,0.4)
+    box-shadow: 0 0 4px 4px var(--shadowHover, #377dbc66);
 }
 
 .proof-ratings-floating-badge .proof-ratings-inner {
@@ -82,9 +92,10 @@
     padding: 15px 20px;
     line-height: 1.2;
     align-items: center;
+    border-radius: 10px;
     flex-direction: column;
     background-color: #fff;
-    border-radius: 10px;
+    text-decoration: none!important;
     border: 3px solid transparent;
     box-shadow: 0 0 4px 0px rgba(0,0,0,0.25);
     transition: 150ms all;
