--- a/assets/css/proof-ratings-generated.css
+++ b/assets/css/proof-ratings-generated.css
@@ -1,17 +1,9 @@
 .proof-ratings-widget.proof-ratings-widget-google {
-	--themeColor: #03ab4e;
+	--themeColor: #febc00;
 }
 
 .proof-ratings-widget.proof-ratings-widget-facebook {
 	--themeColor: #0f7ff3;
-}
-
-.proof-ratings-widget.proof-ratings-widget-yelp {
-	--themeColor: #e21c21;
-}
-
-.proof-ratings-widget.proof-ratings-widget-bbb {
-	--themeColor: #136796;
 }
 
 .proof-ratings-widget.proof-ratings-widget-energysage {
@@ -22,6 +14,14 @@
 	--themeColor: #0f92d7;
 }
 
+.proof-ratings-widget.proof-ratings-widget-yelp {
+	--themeColor: #e21c21;
+}
+
+.proof-ratings-widget.proof-ratings-widget-bbb {
+	--themeColor: #136796;
+}
+
 .proof-ratings-widget.proof-ratings-widget-guildquality {
 	--themeColor: #032e57;
 }
@@ -30,5 +30,4 @@
 }
 
 .proof-ratings-floating-badge .proof-ratings-review-count {
-	background-color: #212a3d!important;
 }
