--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -1,4 +1,4 @@
-.proof-ratings-status {
+.proofratings-status {
     font-size: 16px;
     padding: 10px;
     margin-bottom: 20px;
@@ -8,18 +8,18 @@
     box-shadow: 0 1px 1px rgb(0 0 0 / 4%);
 }
 
-.proof-ratings-status p {
+.proofratings-status p {
     margin: 0;
     font-size: inherit;
 }
 
-.proof-ratings-settings-wrap .proof-ratings-options {
+.proofratings-settings-wrap .proofratings-options {
     max-width: 1200px;
 }
 
-.proof-ratings-settings-wrap .wp-heading-inline {margin-bottom: 10px;}
+.proofratings-settings-wrap .wp-heading-inline {margin-bottom: 10px;}
 
-.proof-ratings-settings-wrap .nav-tab-wrapper {margin-bottom: 20px!important}
+.proofratings-settings-wrap .nav-tab-wrapper {margin-bottom: 20px!important}
 
 .review-sites-checkboxes {
     display: flex;
