--- a/assets/css/proofratings-generated.css
+++ b/assets/css/proofratings-generated.css
@@ -1,5 +1,6 @@
 .proofratings-widget.proofratings-widget-google {
-	--themeColor: #dd3333;
+	--themeColor: #8224e3;
+	background-color: #828282;
 }
 
 .proofratings-widget.proofratings-widget-facebook {
@@ -10,12 +11,12 @@
 	--themeColor: #bf793f;
 }
 
-.proofratings-widget.proofratings-widget-solarreviews {
-	--themeColor: #0f92d7;
-}
-
 .proofratings-widget.proofratings-widget-yelp {
 	--themeColor: #e21c21;
+}
+
+.proofratings-widget.proofratings-widget-solarreviews {
+	--themeColor: #0f92d7;
 }
 
 .proofratings-widget.proofratings-widget-bbb {
@@ -27,8 +28,10 @@
 }
 
 .proofratings-floating-badge {
+	--shadowColor: #dd993366;
 }
 
 .proofratings-floating-badge .proofratings-review-count {
+	color: #cecece!important;
 	background-color: #1f9e25!important;
 }
