--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -13,6 +13,10 @@
     font-size: inherit;
 }
 
+.proofratings-settings-wrap .shortcode-info {
+    margin-bottom: 20px;
+}
+
 .proofratings-settings-wrap .proofratings-options {
     max-width: 1200px;
 }
