--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -86,3 +86,9 @@
 }
 
 fieldset.fieldset-site-review {display: none; margin-bottom: 30px;}
+
+
+.review-us {
+    text-align: center;
+    font-size: 17px;
+}
