--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -35,8 +35,8 @@ html {
 .proofratings-logos {text-align: center; line-height: 1; margin-bottom: 10px;}
 
 .proofratings-logos img {
-    width: 23px;
-    height: 23px;
+    width: 32px;
+    height: 32px;
     margin-left: -6px;
     object-fit: contain;
     border: 2px solid #fff;
@@ -48,6 +48,8 @@ html {
 .proofratings-reviews {
     text-align: center;
     display: flex;
+    font-size: 22px;
+    font-weight: bold;
     justify-content: center;
     align-items: center;
 }
@@ -83,21 +85,24 @@ html {
 .proofratings-review-widgets-grid {
     display: grid;
     gap: 30px;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr))
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 225px))
 }
 
 .proofratings-widget {
     color: var(--textColor, inherit);
     display: flex;
-    padding: 15px 20px;
+    padding: 10px 20px;
     line-height: 1.2;
     align-items: center;
     border-radius: 10px;
+    min-height: 185px;
+    font-family: "Didact Gothic";
     flex-direction: column;
     background-color: #fff;
     text-decoration: none!important;
     border: 3px solid transparent;
-    box-shadow: 0 0 4px 0px rgba(0,0,0,0.25);
+    box-shadow: 1px 1px 4px 0px rgba(191,191,191, 0.25);
     transition: 150ms all;
 }
 
@@ -123,15 +128,18 @@ html {
 
 .proofratings-widget .review-count {
     color: #fff;
-    font-size: 14px;
     line-height: 1.3;
     padding: 5px 12px;
     margin-top: 10px;
+    font-size: 14px;
+    letter-spacing: 0.05px;
     background-color: var(--themeColor, #0f7ff3);
+    border-radius: 2px;
 }
 
 .proofratings-widget .view-reviews {
     font-size: 12px;
     margin-top: 8px;
+    letter-spacing: 0.05px;
 }
 
