--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -4,7 +4,7 @@ html {
 
 .proofratings-floating-badge {
     --padx: 20px;
-    color: inherit;
+    color: inherit!important;
     min-width: 230px;
     display: inline-block;
     position: fixed;
@@ -16,8 +16,8 @@ html {
     background-color: #fff;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 0 4px 4px var(--shadowColor, rgba(246,211,0,0.4));
     transition: all 200ms;
+    box-shadow: 0 0 4px 4px var(--shadowColor, rgba(246,211,0,0.4))!important
 }
 
 .proofratings-floating-badge.right {
@@ -26,7 +26,7 @@ html {
 }
 
 .proofratings-floating-badge:hover {
-    box-shadow: 0 0 4px 4px var(--shadowHover, #377dbc66);
+    box-shadow: 0 0 4px 4px var(--shadowHover, #377dbc66)!important;
 }
 
 .proofratings-floating-badge .proofratings-inner {
@@ -91,20 +91,21 @@ html {
 }
 
 .proofratings-widget {
-    color: var(--textColor, inherit);
+    color: var(--textColor, inherit)!important;
     display: flex;
     padding: 10px 20px;
     line-height: 1.2;
     align-items: center;
     border-radius: 10px;
     min-height: 185px;
-    font-family: "Didact Gothic";
+    font-family: "Didact Gothic"!important;
     flex-direction: column;
     background-color: #fff;
     text-decoration: none!important;
     border: 3px solid transparent;
-    box-shadow: 1px 1px 4px 0px rgba(191,191,191, 0.25);
     transition: 150ms all;
+    /* box-shadow: 1px 1px 4px 0px rgba(191,191,191, 0.25)!important; */
+    box-shadow: 1px 1px 4px 0px rgba(0,0,0, 0.25)!important;
 }
 
 .proofratings-widget:hover {
