--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -4,13 +4,14 @@ html {
 
 .proofratings-floating-badge {
     --padx: 20px;
-    color: inherit!important;
-    min-width: 230px;
+    color: #000!important;
+    min-width: 218px;
     display: inline-block;
     position: fixed;
     left: 30px;
     bottom: 30px;
     z-index: 3000;
+    font-size: 18px;
     line-height: 1.3;
     text-decoration: none!important;
     background-color: #fff;
@@ -30,14 +31,15 @@ html {
 }
 
 .proofratings-floating-badge .proofratings-inner {
-    padding: 15px var(--padx);
+    padding: 15px var(--padx) 10px;
 }
 
-.proofratings-logos {text-align: center; line-height: 1; margin-bottom: 10px;}
+.proofratings-logos {text-align: center; line-height: 1; margin-bottom: 7px;}
 
 .proofratings-logos img {
-    width: 32px;
-    height: 32px;
+    --size: 25px;
+    width: var(--size);
+    height: var(--size);
     margin-left: -6px;
     object-fit: contain;
     border: 2px solid #fff;
@@ -66,7 +68,7 @@ html {
     margin-left: 7px;
     width: 95.5px!important;
     display: inline-block;
-    background-color: rgb(148, 148, 148);
+    background-color: #ddd
 }
 
 .proofratings-stars i {
@@ -78,8 +80,10 @@ html {
 .proofratings-floating-badge .proofratings-review-count {
     color: #fff;
     font-size: 14px;
+    font-weight: 600;
     padding: 10px var(--padx);
     text-align: center;
+    letter-spacing: 1px;
     background-color: #212a3d;
 }
 
@@ -132,9 +136,10 @@ html {
     color: #fff;
     line-height: 1.3;
     padding: 5px 12px;
-    margin-top: 10px;
+    margin-top: 8px;
     font-size: 14px;
-    letter-spacing: 0.05px;
+    font-weight: 600;
+    letter-spacing: 1px;
     background-color: var(--themeColor, #0f7ff3);
     border-radius: 2px;
 }
@@ -142,6 +147,13 @@ html {
 .proofratings-widget .view-reviews {
     font-size: 12px;
     margin-top: 8px;
-    letter-spacing: 0.05px;
+    letter-spacing: 1px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    .proofratings-floating-badge.proofratings-floating-badge-hidden-tablet {display: none!important}
+}
+
+@media screen and (max-width: 767px) {
+    .proofratings-floating-badge.proofratings-floating-badge-hidden-mobile {display: none!important}
+}
