--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -13,6 +13,7 @@ html {
     z-index: 3000;
     font-size: 18px;
     line-height: 1.3;
+    cursor: pointer;
     text-decoration: none!important;
     background-color: #fff;
     border-radius: 10px;
@@ -32,6 +33,10 @@ html {
 
 .proofratings-floating-badge .proofratings-inner {
     padding: 15px var(--padx) 10px;
+}
+
+.proofratings-floating-badge .proofratings-score {
+    font-size: 18px;
 }
 
 .proofratings-logos {text-align: center; line-height: 1; margin-bottom: 7px;}
@@ -101,6 +106,8 @@ html {
     line-height: 1.2;
     align-items: center;
     border-radius: 10px;
+    min-width: 200px;
+    max-width: 225px;
     min-height: 185px;
     font-family: "Didact Gothic"!important;
     flex-direction: column;
@@ -108,7 +115,6 @@ html {
     text-decoration: none!important;
     border: 3px solid transparent;
     transition: 150ms all;
-    /* box-shadow: 1px 1px 4px 0px rgba(191,191,191, 0.25)!important; */
     box-shadow: 1px 1px 4px 0px rgba(0,0,0, 0.25)!important;
 }
 
@@ -156,4 +162,78 @@ html {
 
 @media screen and (max-width: 767px) {
     .proofratings-floating-badge.proofratings-floating-badge-hidden-mobile {display: none!important}
+}
+
+
+.proofratings-floating-widgets-box::-webkit-scrollbar {
+    height: 5px;
+    background-color: transparent;
+}
+
+.proofratings-floating-widgets-box::-webkit-scrollbar-thumb {
+    visibility: hidden;
+    background-color: darkgrey;
+    border-radius: 100px;
+}
+
+.proofratings-floating-widgets-box:hover::-webkit-scrollbar-thumb {
+    visibility: visible;
+}
+
+#proofratings-floating-embed {
+    position: fixed;
+    left: 20px;
+    bottom: 20px;
+    z-index: 5000;
+    display: none;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25)
+}
+
+.proofratings-floating-badge.right + #proofratings-floating-embed {
+    left: auto;
+    right: 20px;
+}
+
+.proofratings-floating-widgets-box {
+    max-width: 80vw;
+    overflow-y: auto;
+    padding: 8px;
+    display: flex;
+    padding-bottom: 4px;
+}
+
+
+#proofratings-floating-embed .proofratings-widget:not(:last-child) {
+    margin-right: 25px;
+}
+
+#proofratings-floating-embed .proofratings-widget {
+    box-shadow: none!important;
+    position: relative;
+}
+
+#proofratings-floating-embed .proofratings-widget:not(:last-child):after {
+    content: "";
+    position: absolute;
+    top: 20px;
+    bottom: 20px;
+    width: 1px;
+    right: -16px;
+    background-color: rgb(224,224,224);
+}
+
+#proofratings-floating-embed .proofrating-close {
+    color: #212a3d;
+    position: absolute;
+    top: 2px;
+    font-weight: bold;
+    font-size: 25px;
+    right: 8px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    cursor: pointer;
 }
