--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -27,6 +27,8 @@ html {
     right: 30px
 }
 
+.proofratings-floating-badge.opened {visibility: hidden;}
+
 .proofratings-floating-badge:hover {
     box-shadow: 0 0 4px 4px var(--shadowHover, #377dbc66)!important;
 }
@@ -56,7 +58,7 @@ html {
 .proofratings-reviews {
     text-align: center;
     display: flex;
-    font-size: 22px;
+    font-size: 21px;
     font-weight: bold;
     justify-content: center;
     align-items: center;
@@ -167,6 +169,7 @@ html {
 
 .proofratings-floating-widgets-box::-webkit-scrollbar {
     height: 5px;
+    width: 5px;
     background-color: transparent;
 }
 
@@ -186,6 +189,7 @@ html {
     bottom: 20px;
     z-index: 5000;
     display: none;
+    padding: 8px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25)
@@ -199,11 +203,8 @@ html {
 .proofratings-floating-widgets-box {
     max-width: 80vw;
     overflow-y: auto;
-    padding: 8px;
     display: flex;
-    padding-bottom: 4px;
 }
-
 
 #proofratings-floating-embed .proofratings-widget:not(:last-child) {
     margin-right: 25px;
@@ -212,6 +213,7 @@ html {
 #proofratings-floating-embed .proofratings-widget {
     box-shadow: none!important;
     position: relative;
+    border: none;
 }
 
 #proofratings-floating-embed .proofratings-widget:not(:last-child):after {
@@ -229,11 +231,34 @@ html {
     position: absolute;
     top: 2px;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 40px;
     right: 8px;
     width: 20px;
     height: 20px;
     text-align: center;
     line-height: 20px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 420px) {
+    .proofratings-floating-widgets-box {
+        overflow-x: inherit;
+        flex-direction: column;
+        max-height: 80vh;
+        overflow-y: auto;
+    }
+    
+    .proofratings-floating-widgets-box .proofratings-widget {
+        padding: 8px;
+        margin-right: 0!important;
+    }
+
+    #proofratings-floating-embed .proofratings-widget:not(:last-child):after {
+        top: auto;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 1px;
+        width: auto;
+    }
 }
