--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -2,15 +2,11 @@ html {
     scroll-behavior: smooth;
 }
 
-.proofratings-floating-badge {
+.proofratings-badge {
     --padx: 20px;
     color: #000!important;
     min-width: 218px;
     display: inline-block;
-    position: fixed;
-    left: 30px;
-    bottom: 30px;
-    z-index: 30000;
     font-size: 18px;
     line-height: 1.3;
     cursor: pointer;
@@ -22,23 +18,24 @@ html {
     box-shadow: 0 0 4px 4px var(--shadowColor, rgba(246,211,0,0.4))!important
 }
 
-.proofratings-floating-badge.right {
+.proofratings-badge.right {
     left: auto;
     right: 30px
 }
 
-.proofratings-floating-badge.opened {visibility: hidden;}
-
-.proofratings-floating-badge:hover {
+.proofratings-badge:hover {
     box-shadow: 0 0 4px 4px var(--shadowHover, #377dbc66)!important;
 }
 
-.proofratings-floating-badge .proofratings-inner {
-    padding: 15px var(--padx) 10px;
-}
+.proofratings-badge .proofratings-inner {padding: 15px var(--padx) 10px}
 
-.proofratings-floating-badge .proofratings-score {
-    font-size: 18px;
+.proofratings-badge .proofratings-score {font-size: 18px}
+
+.proofratings-badge .proofratings-review-count {    
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 1px;
 }
 
 .proofratings-logos {text-align: center; line-height: 1; margin-bottom: 7px;}
@@ -84,15 +81,61 @@ html {
     background-color: #212A3D
 }
 
-.proofratings-floating-badge .proofratings-review-count {
+
+
+
+
+
+
+
+
+
+
+
+
+.proofratings-badge.proofratings-floating-badge.opened {visibility: hidden;}
+
+
+.proofratings-badge.proofratings-floating-badge, .proofratings-badge.badge-float {
+    position: fixed;
+    left: 30px;
+    bottom: 30px;
+    z-index: 30000;
+}
+
+
+
+.proofratings-badge.proofratings-floating-badge.right, .proofratings-badge.badge-float.right {
+    left: auto;
+    right: 30px
+}
+
+.proofratings-badge.badge-float.center {
+    left: 50%;
+    transform: translateX(-50%);
+
+}
+
+.proofratings-badge.proofratings-floating-badge .proofratings-review-count {
     color: #fff;
-    font-size: 14px;
-    font-weight: 600;
     padding: 10px var(--padx);
-    text-align: center;
-    letter-spacing: 1px;
     background-color: #212a3d;
 }
+
+
+.proofratings-badge.proofratings-banner-badge {
+    min-height: 62px;
+    padding: 15px 20px;
+    display: inline-flex;
+    align-items: center;
+    --shadowColor: rgba(0,0,0, 0.10)
+}
+
+.proofratings-badge.proofratings-banner-badge .proofratings-logos {margin-bottom: 0; margin-right: 20px;}
+.proofratings-badge.proofratings-banner-badge .proofratings-reviews {margin-right: 20px;}
+
+
+
 
 .proofratings-review-widgets-grid {
     display: grid;
@@ -157,15 +200,6 @@ html {
     letter-spacing: 1px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 991px) {
-    .proofratings-floating-badge.proofratings-floating-badge-hidden-tablet {display: none!important}
-}
-
-@media screen and (max-width: 767px) {
-    .proofratings-floating-badge.proofratings-floating-badge-hidden-mobile {display: none!important}
-}
-
-
 .proofratings-floating-widgets-box::-webkit-scrollbar {
     height: 5px;
     width: 5px;
@@ -187,18 +221,31 @@ html {
     left: 20px;
     bottom: 20px;
     z-index: 50000;
-    display: none;
+    opacity: 0;
+    visibility: hidden;
     padding: 8px;
     max-width: 90vw;
+    pointer-events: none;
     padding-bottom: 4px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25)
 }
 
-.proofratings-floating-badge.right + #proofratings-floating-embed {
+.proofratings-badge.center + #proofratings-floating-embed {
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.proofratings-badge.right + #proofratings-floating-embed {
     left: auto;
     right: 20px;
+}
+
+.proofratings-badge.opened + #proofratings-floating-embed {
+    opacity: 1;
+    pointer-events: all;
+    visibility: visible;
 }
 
 .proofratings-floating-widgets-box {
@@ -248,6 +295,14 @@ html {
     text-align: center;
     line-height: 20px;
     cursor: pointer;
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    .proofratings-badge.badge-hidden-tablet {display: none!important}
+}
+
+@media screen and (max-width: 767px) {
+    .proofratings-badge.badge-hidden-mobile {display: none!important}
 }
 
 @media screen and (max-width: 575px) {
