--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -52,7 +52,12 @@ html {
     z-index: 56;
     top: -8px;
     right: -8px;
+    display: none;
     background-color: #e9e9e9;
+}
+
+.proofratings-badge:hover .proofratings-close {
+    display: block;
 }
 
 .proofratings-logos {text-align: center; line-height: 1; margin-bottom: 7px; flex: 0 0 auto}
