--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -94,9 +94,6 @@ fieldset.fieldset-site-review {display: none; margin-bottom: 30px;}
     font-size: 17px;
 }
 
-
-
-
 input[type="checkbox"].checkbox-switch {
     text-align: center;
     width: 58px;
@@ -169,4 +166,9 @@ table.form-table.banner-badge-embed #mobile-visibility-option,
 table.form-table.banner-badge-embed #close-button-option,
 table.form-table.banner-badge-embed #banner-badge-position {
     display: none!important;
+}
+
+
+table.form-table:not(.banner-badge-embed) .shortcode-guide {
+    display: none;
 }
