--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -119,9 +119,9 @@ html {
     right: 30px
 }
 
-.proofratings-badge.badge-float.center {
+.proofratings-badge.badge-float.center, .proofratings-badge.badge-float.center-bottom {
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(calc(50vw - 50%));
 
 }
 
@@ -239,12 +239,15 @@ html {
     padding-bottom: 4px;
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25)
+    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
+    transform: translate(var(--translateX, 0), var(--translateY, 110%));
+    transition: all 140ms;
 }
 
-.proofratings-badge.center + #proofratings-floating-embed {
+.proofratings-badge.center + #proofratings-floating-embed,
+.proofratings-badge.center-bottom + #proofratings-floating-embed {
     left: 50%;
-    transform: translateX(-50%);
+    --translateX: -50%
 }
 
 .proofratings-badge.right + #proofratings-floating-embed {
@@ -256,6 +259,7 @@ html {
     opacity: 1;
     pointer-events: all;
     visibility: visible;
+    --translateY: 0
 }
 
 .proofratings-floating-widgets-box {
@@ -307,6 +311,41 @@ html {
     cursor: pointer;
 }
 
+.proofratings-banner-badge-tab {
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: 85vh;
+    text-align: center;
+    transform: translate(calc(50vw - 50%), var(--translateY, calc(100% - var(--badgeHeight, 62px))));
+    transition: all 200ms;
+}
+
+.proofratings-banner-badge-tab.opened {
+    --translateY: -10px
+}
+
+.proofratings-banner-badge-tab .proofratings-banner-badge, .proofratings-banner-badge-tab #proofratings-floating-embed {
+    position: static;
+    transform: translate(0)!important;
+}
+
+.proofratings-banner-badge-tab #proofratings-floating-embed {
+    pointer-events: all;
+    visibility: visible;
+    opacity: 1;
+}
+
+.proofratings-banner-badge-tab #proofratings-floating-embed .proofrating-close {display: none!important}
+
+
+.proofratings-banner-badge-tab .proofratings-banner-badge {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
 @media screen and (min-width: 768px) and (max-width: 991px) {
     .proofratings-badge.badge-hidden-tablet {display: none!important}
 }
@@ -337,4 +376,6 @@ html {
         height: 1px;
         width: auto;
     }
+
+    .proofratings-banner-badge-tab .proofratings-banner-badge {margin-bottom: 10px;}
 }
