--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -172,3 +172,13 @@ table.form-table.banner-badge-embed #banner-badge-position {
 table.form-table:not(.banner-badge-embed) .shortcode-guide {
     display: none;
 }
+
+.proofratings-styles {
+    display: flex;
+    align-items: center;
+}
+
+.proofratings-styles img {
+    margin-left: 30px;
+    height: 100px;
+}
