--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -27,13 +27,6 @@ html {
 
 .proofratings-badge .proofratings-score {font-size: 18px}
 
-.proofratings-badge .proofratings-review-count {    
-    font-size: 14px;
-    font-weight: 600;
-    text-align: center;
-    letter-spacing: 1px;
-}
-
 .proofratings-badge .proofratings-close {
     --size: 22px;
     color: #fff;
@@ -68,6 +61,13 @@ html {
 
 .proofratings-logos img:first-child {margin-left: 0;}
 
+.proofratings-review-count {    
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 1px;
+}
+
 .proofratings-reviews {
     text-align: center;
     display: flex;
@@ -97,6 +97,14 @@ html {
     background-color: var(--star_color, #212A3D)
 }
 
+.proofratings-stars.medium {width: 117px!important}
+.proofratings-stars.medium, .proofratings-stars.medium i {height: 17px!important; -webkit-mask-size: 24px auto}
+
+.proofratings-stars.large {width: 146px!important}
+.proofratings-stars.large, .proofratings-stars.large i {height: 22px!important; -webkit-mask-size: 30px auto}
+
+
+
 .proofratings-badge.opened {visibility: hidden;}
 
 .proofratings-badge.badge-float {
@@ -122,7 +130,6 @@ html {
     border-radius: 0 0 10px 10px;
     background-color: var(--review_background, #212a3d);
 }
-
 
 .proofratings-badge.proofratings-badge-style2 {
     min-height: 62px;
@@ -251,9 +258,6 @@ html {
 
 
 
-
-
-
 .proofratings-floating-widgets-box::-webkit-scrollbar {
     height: 5px;
     width: 5px;
@@ -354,40 +358,64 @@ html {
     cursor: pointer;
 }
 
-.proofratings-banner-badge-tab {
-    position: fixed;
+.proofratings-banner-badge {
+    min-height: 90px;
+    padding: 15px 20px;
+    /* position: fixed; */
     bottom: 0;
+    left: 0;
+    right: 0;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    max-height: 85vh;
+    background-color: var(--backgroundColor, #fff);
+}
+
+.proofratings-banner-badge .proofratings-logos {margin: 0 30px 0 0;}
+
+.proofratings-banner-badge .rating-box {
+    min-width: 230px;
+    height: 48px;
+    margin-right: 30px;
+    line-height: 1;
+    padding: 14px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f5f8ff;
+    border-radius: 100px
+}
+
+.proofratings-banner-badge .proofratings-logos img {--size: 30px}
+
+.proofratings-banner-badge .rating-box .proofratings-stars {margin-right: 15px;}
+
+.proofratings-banner-badge .rating-box .rating {font-size: 14px; font-weight: bold}
+
+.proofratings-banner-badge .proofratings-review-count {margin: 0 70px 0 0}
+
+.proofratings-banner-badge .proofratings-button {
+    color: #fff;
+    width: 140px;
+    height: 48px;
     text-align: center;
-    z-index: 60606;
-    transform: translate(calc(50vw - 50%), var(--translateY, calc(100% - var(--badgeHeight, 62px))));
-    transition: all 200ms;
+    font-size: 15px;
+    padding: 0 15px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 30px;
+    text-decoration: none;
+    background-color: #312ED1;
+    border-radius: 100px;
+    border: 3px solid var(--borderColor, #312ED1)
 }
 
-.proofratings-banner-badge-tab.opened {
-    --translateY: -10px
-}
+.proofratings-banner-badge .proofratings-button:last-child {margin-right: 0;}
 
-.proofratings-banner-badge-tab .proofratings-badge-style2, .proofratings-banner-badge-tab #proofratings-floating-embed {
-    position: static;
-    transform: translate(0)!important;
-}
-
-.proofratings-banner-badge-tab #proofratings-floating-embed {
-    pointer-events: all;
-    visibility: visible;
-    opacity: 1;
-}
-
-.proofratings-banner-badge-tab #proofratings-floating-embed .proofrating-close {display: none!important}
-
-
-.proofratings-banner-badge-tab .proofratings-badge-style2 {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+.proofratings-banner-badge .proofratings-button:last-child {
+    color: var(--textColor, #312ED1);
+    background-color: #fff;
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
@@ -412,8 +440,4 @@ html {
         height: 1px;
         width: auto;
     }
-}
-
-@media screen and (max-width: 380px) {
-    .proofratings-banner-badge-tab .proofratings-review-count {display: none;}
 }
